--- a/.classpath
+++ b/.classpath
@@ -17,7 +17,7 @@
 			<accessrule kind="nonaccessible" pattern="com/android/internal/**"/>
 		</accessrules>
 	</classpathentry>
-	<classpathentry kind="src" path="/Kidsthrive-CordovaLib"/>
+	<classpathentry kind="src" path="/Kiwi-CordovaLib"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="lib" path="/Users/chrisk/tools/robolectric-2.2-jar-with-dependencies.jar"/>
