--- a/.classpath
+++ b/.classpath
@@ -10,7 +10,7 @@
 	<classpathentry kind="lib" path="libs/commons-io-2.4.jar"/>
 	<classpathentry kind="lib" path="libs/httpmime-4.3.4.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="/Applications/android-sdk-mac_x86/platforms/android-19/android.jar" sourcepath="/Applications/android-sdk-mac_x86/sources/android-19">
+	<classpathentry kind="lib" path="/Users/ckelley/Library/Android/sdk/platforms/android-19/android.jar" sourcepath="/Applications/android-sdk-mac_x86/sources/android-19">
 		<attributes>
 			<attribute name="javadoc_location" value="file:/Applications/android-sdk-mac_x86/docs/reference"/>
 		</attributes>
@@ -18,9 +18,9 @@
 			<accessrule kind="nonaccessible" pattern="com/android/internal/**"/>
 		</accessrules>
 	</classpathentry>
-	<classpathentry kind="src" path="/Kiwi-CordovaLib"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry kind="lib" path="/Users/chrisk/tools/robolectric-2.2-jar-with-dependencies.jar"/>
+	<classpathentry kind="lib" path="/Users/ckelley/tools/robolectric-2.2-jar-with-dependencies.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/CordovaApp-CordovaLib"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
